minor changes fixed hard to read messages on bug page and beautified code in views

--- a/music_school/main/static/main/css/bug.css
+++ b/music_school/main/static/main/css/bug.css
@@ -16,3 +16,7 @@
   background-color: rgba(230, 230, 230, 1);
   letter-spacing: 1.2px;
 }
+
+.message-container {
+  bottom: 40%;
+}
